@@ -165,9 +165,6 @@ if get_option('utils')
     base_uri = w3c_base + syntax + 'Tests/'
 
     args = ['--syntax', syntax, manifest, base_uri]
-    if syntax == 'TriG'
-      args += ['--', '-a']
-    endif
 
     test(syntax, run_test_suite,
          args: script_args + args,
