@@ -8,6 +8,7 @@ serd (1.0.1) unstable;
   * Remove serd_uri_to_path()
   * Remove useless character counting from API
   * Rename SerdChunk to SerdStringView
+  * Simplify writer style options
   * Use a fixed-size reader stack
   * Use char* for strings in public API
 
